Project 1 and gitignore

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Useful starting lines\n",
@@ -25,15 +23,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
-    "DATA_TRAIN_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TRAIN_PATH = 'data/train_unzip.csv' \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values' percentage for each column is \n",
+      " [0.152456 0.       0.       0.       0.709828 0.709828 0.709828 0.\n",
+      " 0.       0.       0.       0.       0.709828 0.       0.       0.\n",
+      " 0.       0.       0.       0.       0.       0.       0.       0.399652\n",
+      " 0.399652 0.399652 0.709828 0.709828 0.709828 0.      ]\n",
+      "New missing values' percentage after 70% threshold \n",
+      " [0.152456 0.       0.       0.       0.       0.       0.       0.\n",
+      " 0.       0.       0.       0.       0.       0.       0.       0.\n",
+      " 0.       0.       0.       0.399652 0.399652 0.399652 0.      ]\n",
+      "Intial number of features is \n",
+      " 30\n",
+      "Number of deleted features is \n",
+      " 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove data with more than 70% missing values and store the output in x1 array\n",
+    "x1=tX\n",
+    "missing_percent = np.zeros(len(x1[0,:]))\n",
+    "new_missing_percent = []\n",
+    "i = 0\n",
+    "j = 0\n",
+    "while True:\n",
+    "    if(i==len(x1[0,:])):\n",
+    "            break\n",
+    "    a = (x1[:,i]==-999)+ np.zeros(len(x1[:,i]))\n",
+    "    c = np.sum(a)/len(a)\n",
+    "    missing_percent[j] = c\n",
+    "    j+=1\n",
+    "    if c>=0.7:\n",
+    "        x1= np.delete(x1,i,1)\n",
+    "        continue\n",
+    "    new_missing_percent = np.append(new_missing_percent,c)\n",
+    "    i+=1\n",
+    "    \n",
+    "\n",
+    "print(\"Missing values' percentage for each column is \\n\",  missing_percent)\n",
+    "print(\"New missing values' percentage after 70% threshold \\n\",  new_missing_percent)\n",
+    "print(\"Intial number of features is \\n\", len(tX[0,:]))\n",
+    "print(\"Number of deleted features is \\n\", len(tX[0,:])-len(x1[0,:]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data cleaning 2: For each feature, replace each missing value with mean of feature \n",
+    "s = (len(x1[:,0]),len(x1[0,:]))\n",
+    "logic_array = np.ones(s)\n",
+    "for k in range(len(x1[0,:])):\n",
+    "    \n",
+    "    if(new_missing_percent[k]>0):\n",
+    "        logic_array[:,k] = (x1[:,k]!=-999)+ np.zeros(len(a))\n",
+    "x2= np.multiply(logic_array,x1) #array with zeros instead of -999\n",
+    "\n",
+    "mean = np.mean(x2,0) #vector with mean of each column without -999\n",
+    "means = np.multiply(1-logic_array,mean) # zeros-array with mean of column instead of missing value\n",
+    "x3=np.add(x2,means) # array cleaned, each -999 is replaced with mean of column\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -54,7 +151,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +166,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -79,7 +182,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -88,9 +194,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -102,9 +208,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
