--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -41,96 +50,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data Cleanup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleanup2(x1,new_missing_percent,a):\n",
+    "    s = (len(x1[:,0]),len(x1[0,:]))\n",
+    "    logic_array = np.ones(s)\n",
+    "    for k in range(len(x1[0,:])):\n",
+    "\n",
+    "        if(new_missing_percent[k]>0):\n",
+    "            logic_array[:,k] = (x1[:,k]!=-999)+ np.zeros(len(a))\n",
+    "    x2= np.multiply(logic_array,x1) #array with zeros instead of -999\n",
+    "\n",
+    "    mean = np.mean(x2,0) #vector with mean of each column without -999\n",
+    "    means = np.multiply(1-logic_array,mean) # zeros-array with mean of column instead of missing value\n",
+    "    x3=np.add(x2,means) # array cleaned, each -999 is replaced with mean of column\n",
+    "    return x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values' percentage for each column is \n",
+      "Missing values' percentage for each column is: \n",
       " [0.152456 0.       0.       0.       0.709828 0.709828 0.709828 0.\n",
       " 0.       0.       0.       0.       0.709828 0.       0.       0.\n",
       " 0.       0.       0.       0.       0.       0.       0.       0.399652\n",
       " 0.399652 0.399652 0.709828 0.709828 0.709828 0.      ]\n",
-      "New missing values' percentage after 70% threshold \n",
-      " [0.152456 0.       0.       0.       0.       0.       0.       0.\n",
-      " 0.       0.       0.       0.       0.       0.       0.       0.\n",
-      " 0.       0.       0.       0.399652 0.399652 0.399652 0.      ]\n",
+      "New missing values' percentage after 70% threshold: \n",
+      " [0.152456 0.       0.       0.       0.709828 0.709828 0.709828 0.\n",
+      " 0.       0.       0.       0.       0.709828 0.       0.       0.\n",
+      " 0.       0.       0.       0.       0.       0.       0.       0.399652\n",
+      " 0.399652 0.399652 0.709828 0.709828 0.709828 0.      ]\n",
       "Intial number of features is \n",
       " 30\n",
       "Number of deleted features is \n",
-      " 7\n"
+      " 8\n"
      ]
     }
    ],
    "source": [
-    "# Remove data with more than 70% missing values and store the output in x1 array\n",
-    "x1=tX\n",
-    "missing_percent = np.zeros(len(x1[0,:]))\n",
-    "new_missing_percent = []\n",
-    "i = 0\n",
-    "j = 0\n",
-    "while True:\n",
-    "    if(i==len(x1[0,:])):\n",
-    "            break\n",
-    "    a = (x1[:,i]==-999)+ np.zeros(len(x1[:,i]))\n",
-    "    c = np.sum(a)/len(a)\n",
-    "    missing_percent[j] = c\n",
-    "    j+=1\n",
-    "    if c>=0.7:\n",
-    "        x1= np.delete(x1,i,1)\n",
-    "        continue\n",
-    "    new_missing_percent = np.append(new_missing_percent,c)\n",
-    "    i+=1\n",
+    "# Remove features with more than 70% missing values and store the output in x1 array\n",
+    "def cleanup(x1):\n",
+    "    missing_percent = np.zeros(len(x1[0,:]))\n",
+    "    new_missing_percent = []\n",
+    "    i = 0\n",
+    "    idx_del = 0\n",
+    "    for i in range(len(x1[0,:])):\n",
+    "        a = ((x1[:,i]) == -999)+ np.zeros(len(x1[:,i]))\n",
+    "        c = np.sum(a)/len(a)\n",
+    "        missing_percent[i] = c\n",
+    "        if c>=0.7:\n",
+    "            idx_del = np.append(idx_del,i) #save the index of the deletet features that the same can be removed form the test dat  \n",
+    "        new_missing_percent = np.append(new_missing_percent,c)\n",
+    "    x1 = np.delete(x1,idx_del,1)\n",
+    "    print(\"Missing values' percentage for each column is: \\n\",  missing_percent)\n",
+    "    print(\"New missing values' percentage after 70% threshold: \\n\",  new_missing_percent)\n",
+    "    print(\"Intial number of features is \\n\", len(tX[0,:]))\n",
+    "    print(\"Number of deleted features is \\n\", len(tX[0,:])-len(x1[0,:]))\n",
     "    \n",
-    "\n",
-    "print(\"Missing values' percentage for each column is \\n\",  missing_percent)\n",
-    "print(\"New missing values' percentage after 70% threshold \\n\",  new_missing_percent)\n",
-    "print(\"Intial number of features is \\n\", len(tX[0,:]))\n",
-    "print(\"Number of deleted features is \\n\", len(tX[0,:])-len(x1[0,:]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data cleaning 2: For each feature, replace each missing value with mean of feature \n",
-    "s = (len(x1[:,0]),len(x1[0,:]))\n",
-    "logic_array = np.ones(s)\n",
-    "for k in range(len(x1[0,:])):\n",
-    "    \n",
-    "    if(new_missing_percent[k]>0):\n",
-    "        logic_array[:,k] = (x1[:,k]!=-999)+ np.zeros(len(a))\n",
-    "x2= np.multiply(logic_array,x1) #array with zeros instead of -999\n",
-    "\n",
-    "mean = np.mean(x2,0) #vector with mean of each column without -999\n",
-    "means = np.multiply(1-logic_array,mean) # zeros-array with mean of column instead of missing value\n",
-    "x3=np.add(x2,means) # array cleaned, each -999 is replaced with mean of column\n",
-    "\n",
-    "\n",
-    "    "
+    "    return cleanup2(x1,new_missing_percent,a), idx_del\n",
+    "x3, idx_del = cleanup(tX)"
    ]
   },
   {
@@ -138,6 +129,59 @@
    "metadata": {},
    "source": [
     "## Do your thing crazy machine learning thing here :) ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tx = np.c_[np.ones((y.shape[0], 1)), x3] # Add artifical feature to get non zero intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from implementations import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 466. GiB for an array with shape (250000, 250000) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-64-174054b6fb0c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmax_iters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mgamma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.05\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_regression\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitial_w\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\ML\\MLProject1\\implementations.py\u001b[0m in \u001b[0;36mlogistic_regression\u001b[1;34m(y, tx, initial_w, max_iters, gamma)\u001b[0m\n\u001b[0;32m    137\u001b[0m     \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minitial_w\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    138\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_iters\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 139\u001b[1;33m         \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    140\u001b[0m         \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    141\u001b[0m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\ML\\MLProject1\\implementations.py\u001b[0m in \u001b[0;36mlogistic_gradient\u001b[1;34m(y, tx, w)\u001b[0m\n\u001b[0;32m    117\u001b[0m     \u001b[1;31m# ***************************************************\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m     \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 119\u001b[1;33m     \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpred\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    120\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    121\u001b[0m     \"\"\"\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 466. GiB for an array with shape (250000, 250000) and data type float64"
+     ]
+    }
+   ],
+   "source": [
+    "initial_w = np.zeros((tx.shape[1], 1))\n",
+    "max_iters = 10\n",
+    "gamma = 0.05\n",
+    "w, mse = logistic_regression(y, tx, initial_w, max_iters, gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# w, mse = least_squares(y,tx) #Least square implementation"
    ]
   },
   {
@@ -149,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -158,13 +202,31 @@
    },
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = 'data/test_unzip.csv' \n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tX_test2 = np.delete(tX_test,idx_del,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tX_test3 = np.c_[np.ones((tX_test.shape[0], 1)), tX_test2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -173,20 +235,15 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = '' # TODO: fill in desired name of output file for submission\n",
-    "y_pred = predict_labels(weights, tX_test)\n",
+    "OUTPUT_PATH = 'data/prediction.csv' # TODO: fill in desired name of output file for submission\n",
+    "y_pred = predict_labels(w, tX_test3)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
